--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,15 +31,15 @@ ENDIF()
 TARGET_COMPILE_DEFINITIONS(hpdbscan-bin PRIVATE WITH_OUTPUT)
 
 # check dependencies
-## mpi, optional for distributed computing
-#FIND_PACKAGE(MPI)
-#IF(MPI_FOUND)
-#    SET(CMAKE_CXX_COMPILER "${MPI_CXX_COMPILER}")
-#    TARGET_COMPILE_DEFINITIONS(hpdbscan PRIVATE WITH_MPI)
-#    TARGET_COMPILE_DEFINITIONS(hpdbscan-bin PRIVATE WITH_MPI)
-#ELSE()
-#    MESSAGE("BUILDING WITHOUT MPI SUPPORT")
-#ENDIF()
+# mpi, optional for distributed computing
+FIND_PACKAGE(MPI)
+IF(MPI_FOUND)
+    SET(CMAKE_CXX_COMPILER "${MPI_CXX_COMPILER}")
+    TARGET_COMPILE_DEFINITIONS(hpdbscan PRIVATE WITH_MPI)
+    TARGET_COMPILE_DEFINITIONS(hpdbscan-bin PRIVATE WITH_MPI)
+ELSE()
+    MESSAGE("BUILDING WITHOUT MPI SUPPORT")
+ENDIF()
 
 ## openmp
 FIND_PACKAGE(OpenMP 4.0 REQUIRED)
